# SimpleTetris

./: CMakeLists.txt  enums.h  main.cpp
Blocks/: Block.cpp  Block.h
GameManager/: GameGrid.cpp  GameGrid.h  SceneRenderer.cpp  SceneRenderer.h
